# doc-007-ai

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 33045760a6cf_phase_1_users_workspaces.py  ae4268332220_phase_2_documents_and_chunks.py  b7c1d2e3f4a5_phase_4_invitations_tags_audit_feedback.py  c8d2e3f4a5b6_phase_6_api_keys_usage_events.py  d0ad219aac4f_phase_3_conversations_messages_citations.py
apps/api/src/doc007/: __init__.py  main.py
apps/api/src/doc007/core/: config.py  deps.py  exceptions.py  logging.py  rate_limit.py  security.py  token_blocklist.py
apps/api/src/doc007/db/: base.py
apps/api/src/doc007/providers/: base.py  embeddings.py  llm.py
apps/api/src/doc007/rag/: __init__.py  answer.py  chunking.py  cleaning.py  extraction.py  ingest.py  prompt.py  retrieval.py  vector_store.py
apps/api/src/doc007/schemas/: __init__.py  analytics.py  apikey.py  auth.py  chat.py  document.py  search.py  usage.py  workspace.py
apps/api/src/doc007/services/: __init__.py  analytics_service.py  (+10 more)
apps/api/tests/: conftest.py  test_analytics.py  test_apikeys.py  test_audit.py  test_auth.py  test_auth_hardening.py  test_chat.py  test_chunking.py  test_documents.py  test_extraction.py  test_feedback.py  test_health.py  test_ingest.py  test_members.py  test_oauth.py  test_public_api.py  test_rag.py  test_search.py  test_streaming.py  test_tags.py  test_usage.py  test_workspaces.py
(+88 files in other folders)
